fix image height issue on safari

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -1795,7 +1795,7 @@ ol {
 .community__gallery__section-3 img,
 .community__gallery__section-4 img {
   width: 100%;
-  height: 100%;
+  height: auto;
   object-fit: cover;
 }
 
